// Copyright 2017 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";
package asset;
option go_package="chromium.googlesource.com/enterprise/cel/go/asset";

import "schema/asset/common.proto";
import "schema/asset/network.proto";

// Describes an Active Directory domain or forest.
message ActiveDirectoryDomain {
  // FQDN of ActiveDirectory domain.
  string name = 1;

  // Parent domain name. Only specify this if this domain is going to be a
  // child domain.
  string parent_name = 2;

  // Active Directory functional level. A.k.a. Domain Mode.
  enum Mode {
    // Use the default. (Not recommended).
    DEFAULT = 0;

    Win2003 = 2;
    Win2008 = 3;
    Win2008R2 = 4;
    Win2012 = 5;
    Win2012R2 = 6;
    Win2016 = 7;
  }
  Mode domain_mode = 3;

  // NetBIOS name. Required if |name| is longer than 15 characters.
  string netbios_name = 4;

  // Domain type
  enum Type {
    // Child of an existing domain. (This is the default)
    CHILD = 0;

    // Root of a new domain tree.
    TREE = 1;
  }
  Type type = 5;

  // Forest functional level (only applicable when creating a new forest.
  Mode forest_mode = 6;
};

// Describes a single Active Directory Domain Controller.
message ActiveDirectoryDomainController {
  // Name of the domain. Must match a ActiveDirectoryDomain entry.
  string domain = 1;

  // Machine hosting the ADDS. Must match a WindowsMachine entry.
  string machine = 2;

  // Whether or not to install a DNS server on this machine. The default is
  // almost always |true| unless the domain already exists and the existing
  // domain controller does not host a DNS server.
  repeated bool install_dns = 3;

  // Assume DNS service is not available on the network.
  bool no_dns_on_network = 4;

  // This domain controller should not be a global catalog server.
  bool no_global_catalog = 5;

  bool create_dns_delegation = 6;
}

// Describes a container that a Windows asset can reside in.
//
// Resources like machines, users, and groups can be specified per domain, per
// machine, or per organizational unit. When specifying one of these asset
// types, use the WindowsContainer member to specify where to create the asset.
message WindowsContainer {
  oneof container {
    // Domain name.
    string domain = 1;

    // Machine name.
    string machine = 2;

    // Organizational unit.
    string ou = 3;
  }
}

// Descibes an Active Directory or Windows local group.
message WindowsGroup {
  // Name of the group. Exclude the domain name. The name along is not
  // sufficient if this group corresponds to a Well Known group. Use the
  // |well_known_sid| field for that.
  string name = 1;

  // Human readable description of the group.
  string description = 2;

  // Container for the group. A container must be specified for a WindowsGroup.
  WindowsContainer container = 3;

  // Well-known security identifier. The string should be of the form S-* and
  // should correspond to a known SID as described in
  // https://support.microsoft.com/en-us/help/243330/well-known-security-identifiers-in-windows-operating-systems.
  //
  // Only specify this field if this group corresponds to a well known group.
  string well_known_sid = 4;
}

// A reference to a group. The combination of |name| and |container| must match
// one of the WindowsGroup entries.
message GroupReference {
  // The name of the group.
  string name = 1;

  // Location.
  WindowsContainer container = 2;
}

// Describes a Active Directory or a Windows local user.
message WindowsUser {
  // Name of the user. Exclude the domain name.
  //
  // E.g.: joe
  string name = 1;

  // Description. A.k.a. Full name.
  string description = 2;

  // Container for the user. A container must be specified for a WindowsUser.
  WindowsContainer container = 3;

  // Password. Can be left blank in which case each instantiation of the lab
  // will cause a new password to be generated.
  string password = 5;

  // List of groups that the user belongs to.
  repeated GroupReference member_of = 6;
}

// NetworkInterface describes a single network interface on a machine.
message NetworkInterface {
  // Name of Network entry describing the network that this interface is
  // attached to.
  string network = 1;

  // Fixed address, if this interface is to have one. Leave undefined if the
  // interface should obatain an address automatically.
  FixedAddress fixed_address = 2;
}

// A Windows machine.
message WindowsMachine {
  // Name of the machine. This name will become the hostname for the machine,
  // both absolute and domain relative (if applicable). Hence must be globally
  // unique.
  //
  // For Windows machines, it's advisable to have *short* hostnames, ideally
  // shorter than 11 characters. This allows the name to do double duty as a
  // NetBios name as well as a DNS hostname.
  string name = 1;

  // Container. Only |domain| and |ou| values are acceptable. Currently
  // |machine| is not a valid option. If no container is specified, the machine
  // will be brought up as a standalone workstation or server depending on the
  // installed operating system.
  //
  // This field should be empty for a machine that's referenced in a
  // ActiveDirectoryDomainController entry.
  //
  // Specifying this field results in the machine being joined to the specified
  // domain and, if necessary, placed in the specified container.
  WindowsContainer container = 3;

  // The name of a host.MachineType entry that describes the host machine.
  string host_machine_type = 4;

  // System locale. If left unspecified, the default is left unchanged. Use the
  // following PowerShell command to determine the list of available locales on
  // a Windows machine:
  //
  //     ``` ps1
  //     [System.Globalization.CultureInfo]::GetCultures([System.Globalization.CultureTypes]::AllCultures).name
  //     ```
  //
  // PS DSC Reference:
  // * https://github.com/PowerShell/SystemLocaleDsc
  string locale = 5;

  // Set the system timezone. If left unspecified, the default is left
  // unchanged. Use the following PowerShell command to determine the lsit of
  // available timezone identifiers on a Windows machine:
  //
  //     ``` ps1
  //     [System.TimeZoneInfo]::GetSystemTimeZones().Id
  //     ```
  //
  // PS DSC Reference:
  // * https://github.com/PowerShell/xTimeZone
  string timezone = 6;

  // Network interfaces. There can be more than one for multihomed machines.
  // There MUST be at least one of these.
  repeated NetworkInterface network_interface = 7;

  // List of additional Windows features or roles to install. The values here
  // should be valid for the selected host machine type. You can use the
  // 'Get-WindowsFeature' PowerShell commandlet to retrieve a list of available
  // Windows features.
  //
  // E.g.: windows_feature: "Web-Server"
  //
  // Note: This method cannot be used to specify all sub-features. All 
  // features that needs to be installed should be listed explicitly.
  //
  // Note: Addition of roles can cause features to be installed implicitly.
  // E.g. specifying a machine as the host for an IIS site will automatically
  // install the necessary web server roles. The |windows_feature| field should
  // be used for features that otherwise won't be installed as part of any such
  // role assignment.
  repeated string windows_feature = 8;

  // A configuration file. Specify this if you've run Windows Server Manager
  // and produced a configration file already.
  FileReference configuration_file = 9;
}

